--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.3.1",
     "express-http-context": "^1.2.4",
     "log4js": "^6.3.0",
     "multer": "^1.4.2",
