--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-fileupload": "^1.3.1",
     "express-http-context": "^1.2.4",
     "log4js": "^6.3.0",
+    "md5-file": "^5.0.0",
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
