--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "tsc",
+    "start": "node src/index.js",
+    "ngrok": "ngrok http 8080",
+    "build": "npm run compile && start cmd /c npm run ngrok && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "melod1n",
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.22.0",
