--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.3.1",
     "express-http-context": "^1.2.4",
+    "localtunnel": "^2.0.2",
     "log4js": "^6.4.6",
     "md5-file": "^5.0.0",
     "multer": "^1.4.4",
